/* 
  Localizable.strings
  trackandbill_ios

  Created by Loud on 5/4/18.
  Copyright © 2018 loudsoftware. All rights reserved.
*/

/* format */
"%d of %d" = "%1$d of %2$d";

"credits" = "Credits";

"ok" = "OK";

"yes" = "Yes";

"no" = "No";

"cancel" = "Cancel";

"add_notes" = "Add Notes";

"styles" = "Styles";

"address" = "Address";

"city" = "City";

"client_name" = "Client Name";

"clients" = "Clients";

"contact_person" = "Contact Person";

"country" = "Country";

"done" = "Done";

"email" = "Email";

"new" = "New";

"new_client" = "New Client";

"new_project" = "New Project";

"dashboard" = "Dashboard";

"edit_session" = "Edit Session";

"phone" = "Phone";

"postal_code" = "Postal Code";

"profile" = "Profile";

"project_name" = "Project Name";

"date" = "Date";

"hours" = "Hours";

"minutes" = "Minutes";

"seconds" = "Seconds";

"start_date" = "Start Date";

"complete_date" = "Completion Date";

"notes" = "Notes";

"state" = "State";

"name_company" = "Your Name or Company";

"save_and_exit" = "Save & Exit";

"milage_tracking" = "Milage Tracking";

"track_milage" = "Start Tracking Milage";

"session_notes" = "Session Notes";

"materials" = "Materials";

"materials_cost" = "Materials Cost";

"milage" = "Milage";

"milage_rate" = "Milage Rate";

"invoice" = "Invoice";

"invoice_date" = "Invoice Date";

"invoice_rate" = "Invoice Rate";

"deposit" = "Deposit";

"terms_of_payment" = "Terms";

"approved_by" = "Approved By";

"check_num" = "Check #";

"new_session" = "New Session";

"edit_sessions" = "Edit Sessions";

"invoices" = "Invoices";

"export" = "Export";

"profile_alert" = "You must complete your profile, or turn off \"Show Invoice Header\" in Style settings, before creating an invoice.";

"profile_missing" = "Missing Profile";

"invoice_number" = "Invoice Number";

"show_invoice_header" = "Show Invoice Header";

"invoice_style" = "Invoice Style";

"total_hours_mins_secs" = "Total Time";

"start_stop_timer" = "Start - Stop Timer";

"timer_running" = "Timer is Running";

"stop_timer" = "Please stop timer before continuing.";

"milage_running" = "Milage tracking is running";

"stop_milage" = "Please stop milage tracking before continuing.";

"use_metric" = "Use Metric";

"miles_col" = "Miles";

"save_export" = "Save & Export";

"km_col" = "Kilometers";

"tenths" = "Tenths";

"csv_file" = "Comma Separated Values File (CSV)";

"email_csv" = "Email CSV File";

"csv_export_attach" = "CSV_Sessions.csv";

"csv_email_subject" = "Sessions CSV Export";

"csv_email_body" = "Sessions CSV export file is attached.";

"style_profile_alert" = "You must complete your profile before adding style";

"logo" = "Invoice Image";

"really_delete_title" = "Really Delete?";

"really_delete_message" = "Are you sure you would like to delete?";

"help" = "Help";

"total_due" = "Total Due";

"sub_total" = "Sub Total";

"milage_total" = "Total Milage";

"total_hours" = "Total Hours";

"services" = "Services";

"save_export" = "Save & Print";



